--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -1,46 +1,73 @@
 <p id="notice"><%= notice %></p>
 
-<!-- old redundant -->
-<!-- <h1><%= current_user.first_name %>'s Service Requests</h1> -->
-<!-- keeping it simple -->
-<h1 class="center-align">Service Requests</h1>
+<!-- <h1 class="center-align">Service Requests</h1> -->
 
-<%= link_to 'New Service request', new_user_service_request_path %>
+<!-- <div class="collapsible-header active"><i></i> -->
 
-<% @service_requests.order(created_at: :desc).each do |sr| %>
-  <div class="additional-notes">
-    <p>
-      <%= link_to sr.created_at.to_formatted_s(:long),
-      user_service_request_path(sr.user_id, sr) %>
-    </p>
-    <p>Status: <%= sr.status %></p>
-    <p>
-      Services:
-    </p>
-    <ul>
-      <% sr.services.each do |s| %>
-      <li><%= s.name %></li>
-    </ul>
-    <% end %>
-    <p>
-      Notes:
-    </p>
-    <p>
-      <%= sr.additional_notes %>
-    </p>
-    <p>
-      <% if sr.status == "Accepted"%>
-        <% sr.quotes.each do |q| %>
-          <% if q.status == "Accepted" %>
-            <%= User.find(q.user_id).company_name %>'s quote for <%= number_to_currency(q.amount) %> has been accepted for this service request.
-          <% end %>
-        <% end %>
-      <% else %>
-        There are <%= link_to pluralize(sr.quotes.count, "quote"),
-        user_service_request_path(sr.user_id, sr) %>
-      <% end %>
-    </p>
+
+
+<div class="row">
+  <div class="col s12">
+    <ul class="tabs z-depth-2">
+       <li class="tab col s3"><a class="active" href="#tab1">Dashboard</a></li>
+       <li class="tab col s3"><a href="#tab2">Services</a></li>
+       <li class="tab col s3"><a href="#tab3">Account Settings</a></li>
+       <li class="tab col s3"><a href="#tab4">New Service Request</a></li>
+     </ul>
   </div>
 
-  <hr>
-<% end %>
+      <!-- <div class="additional-notes"> -->
+   <!-- <div class="row"> -->
+     <!-- TAB ONE - DASHBOARD-->
+    <div id="tab1" class="col s10 offset-s1 tab-content">
+      <table>
+        <thead>
+          <th>Services</th>
+          <th>Status</th>
+          <th>Notes</th>
+          <th>Date</th>
+        </thead>
+        <tbody>
+          <% @service_requests.order(created_at: :desc).each do |sr| %>
+          <tr>
+            <td>
+              <ul>
+                <% sr.services.each do |s| %>
+                <li><%= s.name %></li>
+              </ul>
+              <% end %>
+
+            </td>
+            <td>
+              <%= sr.status %>
+            </td>
+            <td>
+              <%= sr.additional_notes %>
+            </td>
+            <td>
+              <%= link_to sr.created_at.to_formatted_s(:long),
+              user_service_request_path(sr.user_id, sr) %>
+             </td>
+             <td class="hidden">
+               <!-- <p>
+                 <% if sr.status == "Accepted"%>
+                   <% sr.quotes.each do |q| %>
+                     <% if q.status == "Accepted" %>
+                       <%= User.find(q.user_id).company_name %>'s quote for <%= number_to_currency(q.amount) %> has been accepted for this service request.
+                     <% end %>
+                   <% end %>
+                 <% else %>
+                   There are <%= link_to pluralize(sr.quotes.count, "quote"),
+                   user_service_request_path(sr.user_id, sr) %>
+                 <% end %>
+               </p> -->
+             </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div id="tab2" class="col s10 offset-s1 tab-content">2</div>
+    <div id="tab3" class="col s10 offset-s1 tab-content">3</div>
+    <div id="tab4" class="col s10 offset-s1 tab-content"><%= link_to 'New Service request', new_user_service_request_path %></div>
+  </div>
