--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,28 +3,24 @@
     <div class="row">
       <div class="col s8 offset-s2">
         <div class="col s6">
-          <h5 class="white-text">Service Works</h5>
+          <h5 class="white-text">Service Warx</h5>
           <p class="grey-text text-lighten-4">Fixing repairs near you</p>
         </div>
         <div class="col s6 ">
-          <h5 class="white-text">Service Works</h5>
+          <h5 class="white-text">Service Werks</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Cities</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Repairs</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Servicers: Join Us</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Request a Quote</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Servicer Login</a></li>              
           </ul>
         </div>
       </div>
-
-
     </div>
 
-  <div class="footer-copyright">
-    <div class="container">
-      &copy; 2015 by Wyncode. Made with love in South Florida.
-    <a class="grey-text text-lighten-4 right" href="#!"></a>
+    <div class="footer-copyright">
+      <div class="container">
+        &copy; 2015 by Wyncode. Made with love in South Florida.
+      </div>
     </div>
-  </div>
 </footer>
