--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for [@user, @user.service_requests.build] do |f| %>
   <% if @service_request.errors.any? %>
+  <% if @service_request.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@service_request.errors.count, "error") %> prohibited this service_request from being saved:</h2>
 
