--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -81,20 +81,9 @@
       </div>
 
 
-<!-- Section 3 - Parallax Home  -->
-<div class="parallax-container valign-wrapper">
-  <div class="section no-pad-bot">
-    <div class="container">
-      <div class="row center">
-      </div>
-    </div>
-  </div>
-  <div class="parallax"><%= image_tag "washing.jpg" %></div>
 
-  <div class="overlay"></div>
-</div>
 
-<!-- Section 4 - Information services section -->
+<!-- Section 4 - Information services section 
 <div class="container">
   <section>
 
@@ -123,8 +112,10 @@
 
   </section>
 </div>
+-->
 
-<!-- Section 5 -  parallax container -->
+<!--
+ Section 5 -  parallax container 
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
@@ -145,3 +136,4 @@
       </div>
     </div>
   </div>
+-->
