--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -47,26 +47,12 @@
 </div>
 
 <% if current_user.is_provider %>
-  <%= form_for @quote, url: { controller: "quotes", action: "create" }, method: :post do %>
-  <% if @quote.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@quote.errors.count, "error") %> prohibited this service_request from being saved:</h2>
-
-      <ul>
-      <% @quote.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-    <%= label_tag :amount, "Quote" %>
-    <%= text_field_tag "quote[amount]"%>
-    <%= label_tag :note, "Note" %>
-    <%= text_area_tag "quote[note]"%>
-    <%= hidden_field_tag("quote[service_request_id]", @service_request.id ) %>
-    <%= hidden_field_tag("service_request[status]", "Quoted" ) %>
-    <%= submit_tag("Send Quote") %>
-  <% end %>
+  <%= render "quotes/quote" %>
 <% end %>
 
+<% if @service_request.status == "Completed" %>
+  <%= render "reviews/review" %>
+<% end %>
+
+<br>
 <%= link_to 'Back', user_service_requests_path(current_user) %>
