Flesh out review create method

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -20,6 +20,7 @@
   <% end %>
 
   <%= label_tag :comment, "Leave a comment" %>
-  <%= f.text_area :comment %>
+  <%= f.text_area :comment %><br>
+  <%= f.submit %>
 
 <% end %>
