edit navbar and add static pages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
              
       <!-- links on desktop -->  
-         <ul id="nav-mobile" class="right hide-on-med-and-down">
+         <ul class="right hide-on-med-and-down">
              <li><%= link_to 'Home', root_path %></li>
              <li><%= link_to 'Services', root_path %></li>
              
@@ -42,9 +42,6 @@
                 <li><%= link_to 'Login', login_path %></li>     
              <% end %>
          </ul>
-      
-         
-         
      </div>
     </nav>
   </div>
