--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,9 +1,11 @@
 
 @import url(https://fonts.googleapis.com/css?family=Sacramento);
+@import url(https://fonts.googleapis.com/css?family=Architects+Daughter);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
 
 /* Navbar logo*/
 a#logo {
-  font-family: 'Sacramento', cursive;
+  font-family: 'Lobster';
   padding-top: 1%;
   font-size: 50px;
 }
@@ -20,7 +22,7 @@ a#logo {
   color: white;
   margin: 16% 0 0 0;
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Architects Daughter', sans-serif;
 }
 
 .home-tag{
