--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,10 +9,11 @@
         <div class="col s6 ">
           <h5 class="white-text">Service Werks</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+            <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
+            <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li>
+            <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>              
             <li><a class="grey-text text-lighten-3" href="#!">Request a Quote</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Servicer Login</a></li>              
+            <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>              
           </ul>
         </div>
       </div>
