--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -51,9 +51,7 @@
 <% end %>
 
 <% if @service_request.status == "Completed" &&  @service_request.review.nil? %>
-  <p>
-    Please leave a review
-  </p>
+  <p>Please leave a review</p>
   <%= render "reviews/review" %>
 <% end %>
 
