--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -13,7 +13,7 @@
   <!-- TAB ONE - DASHBOARD-->
     <div id="tab1" class="col s10 offset-s1 tab-content">
       <!-- Search Box -->    
-      <div id="search-box">
+      <div id="search-box" class="col s6  tab-content">
         <p>
           <%= form_tag(user_service_requests_path(current_user), method: :get) do %>
             <div class="input-append">
