Add default 'select rating' to drop down and updated review#creat to account for errors

--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -14,7 +14,7 @@
 
   <%= label_tag :rating, "Rating" %>
   <%= f.select(:rating) do %>
-    <% [[1,1], [2,2], [3,3], [4,4], [5,5]].each do |o| %>
+    <% [["Select Rating", ""],[1,1], [2,2], [3,3], [4,4], [5,5]].each do |o| %>
       <%= content_tag(:option, o.first, value: o.last) %>
     <% end %>
   <% end %>
