--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,17 +3,17 @@
     <div class="row">
       <div class="col s8 offset-s2">
         <div class="col s6">
-          <h5 class="white-text">Service Warx</h5>
+          <h5 class="white-text">Service Works</h5>
           <p class="grey-text text-lighten-4">Fixing repairs near you</p>
         </div>
         <div class="col s6 ">
-          <h5 class="white-text">Service Werks</h5>
+          <h5 class="white-text">Service Works</h5>
           <ul>
             <li><%= link_to 'About Us', about_us_path, class:"grey-text text-lighten-3" %></li>
             <li><%= link_to 'Contact Us', contact_us_path, class:"grey-text text-lighten-3" %></li>
-            <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>              
+            <li><%= link_to 'Services', services_path, class:"grey-text text-lighten-3" %></li>
             <li><a class="grey-text text-lighten-3" href="#!">Request a Quote</a></li>
-            <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>              
+            <li><a class="grey-text text-lighten-3" href="/login">Servicer Login</a></li>
           </ul>
         </div>
       </div>
