--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:700,400' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400|Signika' rel='stylesheet' type='text/css'>
   <!--Let browser know website is optimized for mobile-->
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCT2eNqRyxDqj4foi8wO31yi40-AC6C820&callback=initMap">
