add homepage text

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,6 +17,17 @@ a#logo {
   position: relative;
  }
 
+/*STYLE FOR MAIN PARAGRAPH ON HOME PAGE*/
+#main-paragraph {
+    background-color: #8bc34a;
+}
+
+#main-paragraph p {
+    font-size: 1.6em;
+    color: white;
+}
+
+
 .home-title {
   font-size: 64;
   color: white;
