--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,1 +1,63 @@
-about us and stuff
+<!-- Section 2 - Homepage Card section-->
+<div class="container">
+    <div class="container">
+        
+        <!-- Main Paragraph -->
+        <div class="col">
+            <h2>Peeking behind the veil -- about team FixMyCar</h2>
+            <p>Here is some history about our project.</p>
+        </div>    
+    </div>
+        
+    <div class="row ">
+      <div class="col s12 m4">
+        <div class="icon block">
+            <h3 class="center brown-text">1. Chirs</h3>
+            <div class="card 300px">
+              <div class="card-image">
+                <%= image_tag("plumbing.jpg")%>
+                <span class="card-title"> <!-- TITLE --> </span>
+              </div>
+              <div class="card-content">
+                <p>1. Aboot Chirs<br>2. Chirs' Snort-Term Goals<br>3. How to contact Chirs</p>
+              </div>
+              <div class="card-action">
+              </div>
+            </div>
+        </div>
+      </div>
+
+        <div class="col s12 m4">
+          <div class="icon block">
+              <h3 class="center brown-text">2. Stephaknee</h3>
+              <div class="card 300px">
+                <div class="card-image">
+                  <%= image_tag("flooring.jpg")%>
+                  <span class="card-title"> <!-- TITLE --> </span>
+                </div>
+                <div class="card-content">
+                  <p>Local companies will send you estimates based on your request. </p>
+                </div>
+                <div class="card-action">
+                </div>
+              </div>
+          </div>
+        </div>
+          <div class="col s12 m4">
+            <div class="icon block">
+            <h3 class="center brown-text">3. Alycksz</h3>
+              <div class="card 300px">
+                <div class="card-image">
+                    <%= image_tag("dining.jpg")%>
+                  <span class="card-title"> <!-- TITLE --> </span>
+                </div>
+                <div class="card-content">
+                  <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
+                </div>
+                <div class="card-action">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
