--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,19 +25,27 @@
     </div>
 </div>
 
+    <div class="container">
+        <!-- Main Paragraph -->
+        <div class="row" id="main-paragraph">
+            <p>Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
+        <p>Simply request a quote for your project, include any relevant details and photos, then wait for a local company to respond with an estimate.</p>
+        </div>    
+    </div>
+
 <!-- Section 2 - Homepage Card section-->
-<div class="container">
+<div class="container">   
     <div class="row ">
       <div class="col s12 m4">
         <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">location_on</i></h2>
+            <h3 class="center brown-text">1. Request a Quote</h3>
             <div class="card 300px">
               <div class="card-image">
-                <%= image_tag("http://placehold.it/200x100")%>
-                <span class="card-title">Search for Service</span>
+                <%= image_tag("plumbing.jpg")%>
+                <span class="card-title"> <!-- TITLE --> </span>
               </div>
               <div class="card-content">
-                <p>Find service near you</p>
+                <p>Looking to start a new home project? Hire an expert to ensure your project is done right from start to finish.</p>
               </div>
               <div class="card-action">
               </div>
@@ -47,14 +55,14 @@
 
         <div class="col s12 m4">
           <div class="icon block">
-              <h2 class="center brown-text"><i class="material-icons">dashboard</i></h2>
+              <h3 class="center brown-text">2. Receive Estimates</h3>
               <div class="card 300px">
                 <div class="card-image">
-                  <%= image_tag("http://placehold.it/200x100")%>
-                  <span class="card-title">Reviews</span>
+                  <%= image_tag("flooring.jpg")%>
+                  <span class="card-title"> <!-- TITLE --> </span>
                 </div>
                 <div class="card-content">
-                  <p>Find local service providers sorted by review.</p>
+                  <p>Local companies will send you estimates based on your request. </p>
                 </div>
                 <div class="card-action">
                 </div>
@@ -63,14 +71,14 @@
         </div>
           <div class="col s12 m4">
             <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">search</i></h2>
+            <h3 class="center brown-text">3. Choose an Expert</h3>
               <div class="card 300px">
                 <div class="card-image">
-                  <%= image_tag("http://placehold.it/200x100")%>
-                  <span class="card-title">View Services</span>
+                    <%= image_tag("dining.jpg")%>
+                  <span class="card-title"> <!-- TITLE --> </span>
                 </div>
                 <div class="card-content">
-                  <p>View all of our services.</p>
+                  <p>Read reviews and chat with local companies to ensure your project turns out exactly the way you want.</p>
                 </div>
                 <div class="card-action">
                 </div>
