change homepage images

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -74,7 +74,7 @@
             <h3 class="center brown-text">3. Choose an Expert</h3>
               <div class="card 300px">
                 <div class="card-image">
-                    <%= image_tag("dining.jpg")%>
+                    <%= image_tag("electrician.jpg")%>
                   <span class="card-title"> <!-- TITLE --> </span>
                 </div>
                 <div class="card-content">
