--- a/app/views/static_pages/services.html.erb
+++ b/app/views/static_pages/services.html.erb
@@ -7,12 +7,12 @@
    </div>
 
    <!-- Section 1 - Parrallax Home -->
-   <div class="parallax overlay"><%= image_tag "teardown.jpg" %>  </div>
+    <div class="parallax overlay"><%= image_tag "brokenhouse.png" %>  </div>
 
    <!-- overlay  -->
     <div class="overlay">
       <% %>
-      <h1 class="home-title">Need home repair?</h1>
+      <h1 class="home-title">Does your home need repairing?</h1>
       <form class="home-form row " action="index.html" method="post">
        <div class="input-field col s10 m4 offset-m4 offset-s1 white z-depth-2">
          <input id="zipcode" type="text" name="zipcode">
