--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -82,9 +82,14 @@
 
 
 
+  <!-- Section 3 - Parallax Home  -->
+   <!-- <div class="parallax-container" id="wash">
+     <div class="parallax"><%= image_tag "washing.jpg" %></div>
+     <div class="overlay"> Hey </div>
+   </div> -->
 
-<!-- Section 4 - Information services section 
-<div class="container">
+<!-- Section 4 - Information services section -->
+<!-- <div class="container">
   <section>
 
     <div class="row ">
@@ -111,12 +116,12 @@
     </div>
 
   </section>
-</div>
--->
+</div> -->
 
-<!--
- Section 5 -  parallax container 
-<div class="parallax-container valign-wrapper">
+
+<!--Section 5 -  parallax container-->
+
+<!-- <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
@@ -135,5 +140,4 @@
         </div>
       </div>
     </div>
-  </div>
--->
+  </div> -->
