--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,6 +7,7 @@
 a#logo {
   font-family: 'Signika';
   font-size: 50px;
+  margin-left: 2%;
 }
 
 /***** HomePage *****/
@@ -46,6 +47,9 @@ a#logo {
  }
 
 
+#wash{
+  height: 200px !important;
+}
 
 #homedoor {
   height: 100vh;
