--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,28 @@
 <!-- Navbar -->
 <header>
   <div class="navbar-fixed">
-    <ul id="dropdown1" class="dropdown-content">
-        <li><%= link_to 'Dashboard', user_service_requests_path(current_user.id)%></li>
-        <li><%= link_to 'Settings', user_service_requests_path(current_user.id)%></li>
-        <li class="divider"></li>
-        <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
-    </ul>
+
     <nav class="light-green">
-     <div class="nav-wrapper container">
+     <div class="nav-wrapper">
        <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
 
        <!-- for hamburger menu -->
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
 
       <!-- links on desktop -->
          <ul id="nav-mobile" class="right hide-on-med-and-down">
-             <li><%= link_to 'Home', root_path %></li>
+             <li><%= link_to 'Home', root_path, id: "home-button" %></li>
              <li><%= link_to 'Services', root_path %></li>
 
              <!-- Dropdown Trigger -->
              <% if logged_in? %>
              <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Menu<i class="material-icons right"></i></a></li>
-
+             <ul id="dropdown1" class="dropdown-content">
+                 <li><%= link_to 'Dashboard', user_service_requests_path(current_user.id)%></li>
+                 <li><%= link_to 'Settings', user_path(current_user.id) %></li>
+                 <li class="divider"></li>
+                 <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
+             </ul>
                     <% else %>
                     <li><%= link_to 'Login', login_path %></li>
 
@@ -31,13 +31,13 @@
 
 
          <!-- links on mobile -->
-         <ul class="side-nav" id="mobile-demo">
+         <ul class="side-nav" id="mobile">
              <li><%= link_to 'Home', root_path %></li>
              <li><%= link_to 'Services', root_path %></li>
 
              <% if logged_in? %>
                 <li><%= link_to 'Dashboard', user_service_requests_path(current_user.id)%></li>
-                <li><%= link_to 'Settings', user_service_requests_path(current_user.id)%></li>
+                <li><%= link_to 'Settings', user_path(current_user.id)%></li>
                 <li class="divider"></li>
                 <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
 
