--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -10,13 +10,14 @@
   <% end %>
 <p>Notes:</p>
 <p><%= @service_request.additional_notes %></p>
+<%# Show up to 5 uploaded images %>
 <%= image_tag @service_request.image[0].url(:show) if @service_request.image[0] %>
 <%= image_tag @service_request.image[1].url(:show) if @service_request.image[1] %>
 <%= image_tag @service_request.image[2].url(:show) if @service_request.image[2] %>
 <%= image_tag @service_request.image[2].url(:show) if @service_request.image[3] %>
 <%= image_tag @service_request.image[2].url(:show) if @service_request.image[4] %>
 
-
+<%# Show only the accepted wuote %>
 <% if @accepted_quote %>
   <div class="accepted-quote">
     <%= @accepted_quote.user.company_name %>'s Quote:<br>
@@ -25,6 +26,7 @@
     Quote Status: <%= @accepted_quote.status %>
   </div>
 <% else %>
+<%# if no accepted quote, show the user all open quotes %>
   <% @service_request.quotes.each do |q| %>
     <div class="quote">
       <%= q.user.company_name %>'s Quote:<br>
@@ -32,12 +34,14 @@
       <% if q.note %>
         <%= q.user.company_name %> says, "<%= q.note %>"<br>
       <% end %>
+
+      <%# Company rating value opens a company review modal %>
       Company Rating: <%= link_to company_review(q.user_id), "#review-modal", class: "review-modal-trigger" %><br>
 
+      <%# Company reviw modal %>
       <div id="review-modal" class="modal">
         <div class="modal-content">
           <h4><%= q.user.company_name%>'s Reviews</h4>
-
           <table>
             <tr>
               <th>
@@ -70,12 +74,14 @@
         </div>
       </div>
 
+      <%# Accept quote link %>
       <% if @service_request.user_id == current_user.id && !current_user.is_provider %>
         <%= link_to "Accept", accept_quote_path(quote_id: { quote_id: q.id },
                                                 quote: { status: "Accepted" },
                                                 service_request: {status: "Accepted"} ),
                                                 data: { confirm: "Are you sure you want to accept #{q.user.company_name}'s quote for #{number_to_currency(q.amount)}."} %>
       <% end %>
+      <%# Company can delete their own quotes only %>
       <%= link_to "Delete", service_request_quote_path(q, service_request: {status: "Open"}),
           method: :delete if current_user.id == q.user_id %>
     </div>
