--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,11 +1,7 @@
 
-@import url(https://fonts.googleapis.com/css?family=Sacramento);
-@import url(https://fonts.googleapis.com/css?family=Architects+Daughter);
-@import url(https://fonts.googleapis.com/css?family=Lobster);
-
 /* Navbar logo*/
 a#logo {
-  font-family: 'Signika';
+  font-family: 'Signika', sans-serif;
   font-size: 50px;
   margin-left: 2%;
 }
@@ -18,11 +14,12 @@ a#logo {
  }
 
 .home-title {
-  font-size: 64;
+  font-size: 4.8rem;
+  font-weight: 500;
   color: white;
   margin: 16% 0 0 0;
   text-align: center;
-  font-family: 'Architects Daughter', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .home-tag{
@@ -108,4 +105,8 @@ h5 {
 /* signup login*/
 .signup-form{
     padding: 3% 0 3% 0 !important;
+}
+
+#service-request{
+  
 }
