--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -7,7 +7,7 @@
 <ul class="collapsible" data-collapsible="accordion">
    <li>
      <!-- Section ONE - DASHBOARD-->
-     <div class="collapsible-header"><i class="material-icons">assignment</i>Orders</div>
+     <div class="collapsible-header active"><i class="material-icons">assignment</i>Orders</div>
      <div class="collapsible-body">
        <div class="row">
          <div class="col s8 offset-s2">
@@ -69,23 +69,15 @@
          <div class="col s8 offset-s2">
            <table>
              <thead>
-               <th>Service</th>
                <th>Date</th>
                <th>Status</th>
+               <th>Service</th>
                <th>Notes</th>
              </thead>
              <tbody>
                <% @service_requests.order(created_at: :desc).each do |sr| %>
                  <% if sr.status == "Completed" %>
                    <tr>
-                     <td>
-                       <ul>
-                         <% sr.services.each do |s| %>
-                         <li><%= s.name %></li>
-                       </ul>
-                       <% end %>
-
-                     </td>
                      <td>
                        <%= link_to sr.created_at.to_formatted_s(:short),
                        user_service_request_path(sr.user_id, sr) %>
@@ -94,9 +86,15 @@
                        <%= sr.status %>
                      </td>
                      <td>
+                       <ul>
+                         <% sr.services.each do |s| %>
+                         <li><%= s.name %></li>
+                       </ul>
+                       <% end %>
+                     </td>
+                     <td>
                        <%= sr.additional_notes %>
                      </td>
-
                       <td class="hidden">
                         <!-- <p>
                           <% if sr.status == "Accepted"%>
