--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -1,1 +1,45 @@
 We need a contact form of any kind, even if we host it elsewhere.
+<style>
+    .gallery img {
+        width: 100%;
+        height: 100%;
+        
+    }
+    .gallery div {
+        display: inline-block;
+        width: 20%;
+        height: 20%;
+        padding: 0;
+        margin: 0;
+    }
+</style>
+
+<%= images = [
+    "assets/services/tools.jpg",
+    "assets/services/roof.jpg",
+    "assets/services/walltile.jpg",
+    "assets/services/powerwashing.jpg",
+    "assets/services/floortile.jpg",
+    "assets/services/drywall.jpg",
+    "assets/services/kitchen.jpg",
+    "assets/services/paving.jpg",
+    "assets/services/hvac.jpg",
+    "assets/services/plumbing.jpg",
+    "assets/services/landscaping.jpg",
+    "assets/services/tools.jpg",
+    "assets/services/electrician.jpg",
+    "assets/services/painting.jpg",
+    "assets/services/grass.jpg",
+    "assets/services/carpenter.jpg",
+    "assets/services/roof.jpg",
+    "assets/services/fence.jpg",
+    
+    ] %>
+
+<div class="gallery row">
+    <%= images.each do |i| %>
+        <div class="">
+            <img src="<%= i %>" />
+        </div>
+    <% end %>
+</div>
