--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -13,7 +13,9 @@
 
   <div class="row col s12">
     <h2>New Service Request</h2>  
-    <p>Need a hand? Please fill out this short form to get started on your service quote.</p>
+    <p>Getting started on your home improvement or repair project is easy with Service Works. Our mission is to connect local service companies with individuals looking to get started on a home improvement or repair project.</p>
+
+    <p>To begin, simply fill-in the following form and be sure to include any relevant details and photos. A local company will respond to your request and provide an estimate.</p>
   </div>
 
   <div class="input-field col s12">
